# pqc-envoy-filter

./: .bazelrc  .dockerignore  .gitignore  BAZEL_STATUS.md  BUILD  BUILD_AND_RUN.md  CI_CD_GUIDE.md  CMakeLists.txt  Dockerfile  ERROR_HANDLING_COMPLETE.md  ERROR_HANDLING_DESIGN.md  ERROR_HANDLING_IMPLEMENTATION.md  ERROR_HANDLING_STATUS.md  MIGRATION_STATUS.md  MODULE.bazel  MODULE.bazel.disabled  PHASE2_PLAN.md  PROJECT_STATUS.md  README.md  TEST_28_IMPLEMENTATION_SUMMARY.md  TEST_CLIENT_GUIDE.md  VIABILITY_ASSESSMENT.md  WORKSPACE  bazel-bin  bazel-out  bazel-pqc-envoy-filter  bazel-testlogs  docker-compose.yml  envoy.yaml  envoy_headers.BUILD  envoy_repositories_extra.patch  envoy_wrapper.BUILD  requirements.txt  test-client.py  test-docker.sh  test_compile.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
include/envoy/http/: filter.h
include/envoy/server/: filter_config.h
include/source/common/buffer/: buffer_lib.h
include/source/common/common/: logger.h
src/: BUILD  base64_utils.cc  base64_utils.h  pqc_crypto_utils.h  pqc_filter.cc  pqc_filter.h  pqc_filter_abi_wrapper.cc  pqc_filter_config.cc  pqc_filter_config.h  pqc_filter_factory.cc  pqc_filter_factory.h
src/proto/: BUILD  pqc_filter.proto
test/: BUILD  base64_utils_test.cc  check_algorithms.cc  liboqs_integration_test.cc  pqc_filter_config_test.cc  pqc_filter_factory_test.cc  pqc_filter_test.cc  pqc_filter_testable.h
test/mocks/: BUILD  mock_buffer.h  mock_http.h  mock_logger.h
