###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# Register the standard C++ rules
bazel_dep(name = "rules_cc", version = "0.1.1")

# Register the Google Test framework
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")